# MouseDetecterForLinux

./: .main.c.swp  CMakeLists.txt  Makefile  README.md  main.c  main.x.c  sample.c  stdheaders.h
source/: CMakeLists.txt  MouseDetecter.c  MouseDetecter.h
